# stamina

./: .gitignore  Cargo.toml  README.md  benchmarks.sh  build.rs  check_z3_model.py  cycle_commute_output.sta  dg_trim.txt  efc_trace.txt  full_benchmark.txt  output.lab  output.txt  output_efc.txt  output_full.txt  output_parsed.txt  output_timed.txt  rustc-ice-2025-04-03T19_32_44-2793700.txt  rustc-ice-2025-04-03T19_33_46-2796964.txt  rustc-ice-2025-04-03T19_33_59-2797013.txt  rustc-ice-2025-04-03T19_36_33-2797447.txt  rustc-ice-2025-04-03T19_40_17-2802056.txt  rustc-ice-2025-04-03T19_40_29-2802154.txt
benchmark_models/ModifiedYeastPolarization/: ModifiedYeastPolarization.prop
docs/: arguments.md  input.md  z3.md
models/DA_Simple/: DA_Simple.crn
models/ModifiedYeastPolarization/: ModifiedYeastPolarization.crn  gen_trace.py
models/SimplifiedMotilityRegulation_alt/: SimplifiedMotilityRegulation_alt.crn  SimplifiedMotilityRegulation_alt.prop
src/: dependency.rs  kani_playground.rs  main.rs  parser.rs
src/arguments/: arg_parser.rs  cmd_executor.rs  default_args.rs  mod.rs
src/benchmarks/: bench_ragtimer.rs  mod.rs
src/bmc/: bmc.rs  bounder.rs  bounds.rs  encoding.rs  formula.rs  mod.rs  unroller.rs  vas_bmc.rs  yices.rs  z3_bounds.rs
src/bounder/: mod.rs  z3_bounds.rs
src/builder/: builder.rs  mod.rs  old_rl.rs  ragtimer_rl.rs  stamina.rs  wayfarer.rs
src/checker/: checker.rs  result.rs
src/cycle_commute/: commute.rs  mod.rs
src/demos/: bmc_demo.rs  cycle_commute_benchmark.rs  cycle_commute_demo.rs  mod.rs
src/dependency/: graph.rs  mod.rs  trimmer.rs
src/logging/: colors.rs  logging.rs  messages.rs
src/model/: mod.rs  model.rs  parser.rs  util.rs  vas_model.rs  (+1 more)
(+20 files in other folders)
