[package]
name = "practice"
version = "0.1.0"
edition = "2021"
description = "PRobabilistic Research and Analysis of C(RN|TMC) (and VAS) Tool Integration for Checking and Evaluation"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
evalexpr = "12.0.2"
nalgebra = "0.33.2"
num = "0.4.3"
# prusti-contracts = "0.2.0"
# yices2 = "0.1.4"
# yices2 = { version = "2.6.4-patch.1" }
# serde = { version = "1.0.215", features = ["derive"] }

# [dependencies.yices2]
# version = "2.6.4-patch.1"