[package]
name = "practice"
version = "0.1.0"
edition = "2021"
description = "PRobabilistic Research and Analysis of C(RN|TMC) (and VAS) Tool Integration for Checking and Evaluation"
build = "build.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
colored = "3.0.0"
evalexpr = "12.0.2"
nalgebra = "0.34.0"
num = "0.4.3"
z3 = "0.17.0"

itertools = "0.14.0"
rand = "0.9.1"

chrono = "0.4"
sysinfo = "0.29.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(creusot)'] }
