[package]
name = "stamina-toolset"
version = "0.1.0"
edition = "2021"
description = "PRobabilistic Research and Analysis of C(RN|TMC) (and VAS) Tool Integration for Checking and Evaluation"
build = "build.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
colored = "3.0.0"
evalexpr = "13.0.0"
nalgebra = "0.34.0"
num = "0.4.3"
z3 = "0.19.1"

itertools = "0.14.0"
rand = "0.9.1"

chrono = "0.4"
sysinfo = "0.38.1"
walkdir = "2.5.0"
hostname = "0.4.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(creusot)'] }
